# river-xmonadwm

./: Makefile.dev  README.md  meson.build
doc/: meson.build  river-xmonadwm.1.scd
inc/: arrange.h  config.h  displ.h  inc2.h  layout.h  list.h  listeners.h  log.h  output.h  river_layout.h  tag.h
pro/: meson.build
src/: arrange.c  config.c  displ.c  layout.c  list.c  listener_registry.c  listener_river_layout.c  log.c  main.c  meson.build  output.c  river_layout.c  src1.c  src2.c  tag.c
tst/: layout.c  meson.build  tag.c  test1.c  test2.c  tst-arrange-master-stack.c  tst-arrange-views.c  tst-arrange.c  tst-layout-area.c  tst-layout-calc-master-stack.c  tst-layout-master-stack.c  tst-layout-push-stack.c  tst-layout-views.c  tst-layout.c  tst-tag.c  tst.h
